# Yzis

./: .cvsignore  .gitignore  .hgignore  AUTHORS  AdditionalInfo.txt  BUGS  BUILDING_YZIS.txt  CMakeLists.txt  COPYING  COPYING.LGPL  ChangeLog  Compile  ConfigureChecks.cmake  ConvenienceLibs.cmake  HACKING  INSTALL  MOTIONS  Makefile  Makefile.am  Makefile.am.in  Makefile.cvs  README  README.qmake  RELEASE  SConscript  SConstruct  TODO  TODO.redesign-drawbuffer  VERSION  Yzis.kdevelop  action.cpp  action.h  attribute.cpp  attribute.h  buffer.cpp  buffer.h  color.cpp  color.h  commands.cpp  commands.h  (+155 more)
doc/: CMakeLists.txt  Makefile.am  VI-COMPATIBILITY  arch_overview.dx  build_doxygen_documentation.sh  componenent_desc.dx  default.doxy.in  devhandbook.doxy  devhandbook.doxy.in  kyzis.doxy  libyzis.doxy  libyzis.doxy.in  mainpage.dx  nyzis.doxy  nyzis.doxy.in  qyzis.doxy  scripting.dx  specs.tex  startup_guide.dx  technologies.dx  yzis.1
doc/devhandbook/: CMakeLists.txt  arch_overview.dx  buffer_view_separation.xcf  building_yzis.dx  completion.dx  debugging.dx  devhandbook.doxy.in  index.html.in  integrating_lua.dx  lua.dx  mainpage.dx  mainpage.dx.in  option_system.dx  rendering.dx  scripting.dx  startup_guide.dx  swap_file.dx  syntax_highlighting.dx  technologies.dx  testing.dx  undo_redo.dx
doc/examples/: 2html.lua  example.lua  yzis.conf
doc/handbook/: CMakeLists.txt  YzisDeveloperHandbook.tex  YzisUserHandbook.tex
doc/xml/: example.xml
doc/xslt/: genindex.xsl
doc/yzis-doc/: CMakeLists.txt
gyzis/: CMakeLists.txt  Makefile.am  Makefile.in  document.cpp  document.h  gview.cpp  gview.h  gyzis.cpp  gyzis.desktop  gyzis.h  main.cpp  view.cpp  view.h
kpart_yzis/: CMakeLists.txt  HACKING  ktedocument.cpp  ktedocument.h  kteeditor.cpp  kteeditor.h  ktefactory.cpp  ktefactory.h  kteview.cpp  kteview.h  kycommand.cpp  kycommand.h  kycursor.cpp  kycursor.h  kyeditor.cpp  kyeditor.h  kyinfobar.cpp  kyinfobar.h  kysession.cpp  kysession.h  kyview.cpp  kyview.h  kyziscommandwidget.cpp  kyziscommandwidget.h  kyziscursor.cpp  kyziscursor.h  kyziseditor.cpp  kyziseditor.h  kyzisinfobar.cpp  kyzisinfobar.h  kyzissession.cpp  kyzissession.h  kyzisview.cpp  kyzisview.h  yzispart.desktop  yzispart.rc
kyzis/: CMakeLists.txt  Makefile.am  command.cpp  command.h  commandwidget.cpp  commandwidget.h  configdialog.cpp  configdialog.h  cursor.cpp  cursor.h  document.cpp  document.h  editor.cpp  editor.h  factory.cpp  factory.h  konsole.cpp  konsole.h  kyzis.cpp  kyzis.desktop  kyzis.h  kyzis.kcfg  kyzis_factory.cpp  kyzis_factory.h  kyzis_part.desktop  kyzis_part.rc  kyzis_shell.rc  kyziscodecompletion.cpp  kyziscodecompletion.h  kyziscommand.cpp  kyziscommand.h  kyzisdoc.cpp  kyzisdoc.h  kyzisedit.cpp  kyzisedit.h  kyzispart.desktop  kyzispart.rc  kyzisview.cpp  kyzisview.h  main.cpp  (+7 more)
kyzis/pics/: CMakeLists.txt
kyzis/po/: fr.po  kyzis.pot  maketrans
kyzis/src/: CMakeLists.txt  Makefile.am  commandwidget.cpp  commandwidget.h  configdialog.cpp  configdialog.h  cursor.cpp  cursor.h  document.cpp  document.h  editor.cpp  editor.h  factory.cpp  factory.h  hlconfig.cpp  hlconfig.h  konsole.cpp  konsole.h  ktexteditoriface.cpp  ktexteditoriface.h  kyzis.cpp  kyzis.h  (+7 more)
libqt4yzis/: Makefile.am
libqtyzis/: Makefile.am
libyzis/: CMakeLists.txt  Makefile.am  action.cpp  action.h  attribute.cpp  attribute.h  buffer.cpp  buffer.h  color.cpp  color.h  commands.cpp  commands.h  cursor.cpp  cursor.h  debug.cpp  debug.h  drawbuffer.cpp  drawbuffer.h  drawbufferiterators.cpp  drawbufferiterators.h  drawcell.cpp  drawcell.h  drawline.cpp  drawline.h  events.cpp  events.h  ex_executor.cpp  ex_executor.h  ex_lua.cpp  ex_lua.h  excommands.cpp  excommands.h  folding.cpp  folding.h  font.cpp  font.h  gui.h  history.cpp  internal_options.cpp  internal_options.h  (+115 more)
libyzisrunner/: CMakeLists.txt  NoGuiSession.cpp  NoGuiSession.h  NoGuiView.cpp  NoGuiView.h  libyzisrunner.pro  main.cpp  makedsp.bat
nyzis/: CMakeLists.txt  Makefile.am  document.cpp  document.h  eventloop.cpp  eventloop.h  factory.cpp  factory.h  main.cpp  mainpage.dx  nsession.cpp  nsession.h  nysession.cpp  nysession.h  nystatusbar.cpp  nystatusbar.h  nyview.cpp  nyview.h  nyz_session.cpp  nyz_session.h  nyz_view.cpp  nyz_view.h  session.cpp  session.h  viewwidget.cpp  viewwidget.h
qyzis/: CMakeLists.txt  Makefile.am  TODO.txt  commandwidget.cpp  commandwidget.h  configuredialog.cpp  configuredialog.h  configuredialog.ui  cursor.cpp  cursor.h  editor.cpp  editor.h  factory.cpp  factory.h  getopt.c  keyConverter.cpp  keyConverter.h  linenumbers.cpp  linenumbers.h  main.cpp  makedsp.bat  qsession.cpp  qsession.h  qycommandline.cpp  qycommandline.h  qyconfiguredialog.cpp  qyconfiguredialog.h  qyconfiguredialog.ui  qycursor.cpp  qycursor.h  qyedit.cpp  qyedit.h  qylinenumbers.cpp  qylinenumbers.h  qysession.cpp  qysession.h  qystatusbar.cpp  qystatusbar.h  qyview.cpp  qyview.h  (+19 more)
scripts/: 2html.lua  CMakeLists.txt  Makefile.am  clevertab.lua  switch.lua  test_vim_to_lua.lua  vim_to_lua.lua
tests/: CMakeLists.txt  Makefile.am  PhilAsserts.cpp  PhilAsserts.h  PhilTestRunner.cpp  README  TBuffer.h  TSession.h  TView.cpp  TView.h  TYZSession.h  TYZView.cpp  TYZView.h  env_test.sh  env_test.sh.in  env_tests  main.cpp  run_tests.sh  testBuffer.cpp  testBuffer.h  testCommands.cpp  testCommands.h  testDebugBackend.cpp  testSearch.cpp  testUndo.cpp  testUndo.h  testYZBuffer.cpp  testYZBuffer.h  testYZCommands.cpp  testYZCommands.h  tests.pro
yzis/: .cvsignore  AUTHORS  ChangeLog  Design  Makefile.am  Makefile.cvs  README  TODO  acinclude.m4  config.h.in  configure.in  configure.in.in  mkinstalldirs
yzis_kpart/: CMakeLists.txt  HACKING  ktedocument.cpp  ktedocument.h  kteeditor.cpp  kteeditor.h  ktefactory.cpp  ktefactory.h  kteview.cpp  kteview.h  kyziscommandwidget.cpp  kyziscommandwidget.h  kyziscursor.cpp  kyziscursor.h  kyzisdocument.cpp  kyzisdocument.h  kyziseditor.cpp  kyziseditor.h  kyzisfactory.cpp  kyzisfactory.h  kyzisinfobar.cpp  kyzissession.cpp  kyzissession.h  kyzisview.cpp  kyzisview.h  yzis_kpart.desktop  yzis_kpart.rc
(+365 files in other folders)
